--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openpublish-state",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "Request information about the state of Open Publish documents.",
   "main": "index.js",
   "scripts": {
@@ -23,11 +23,12 @@
   },
   "homepage": "https://github.com/blockai/openpublish-state#readme",
   "devDependencies": {
-    "tape": "^4.0.1"
+    "tape": "^4.2.0"
   },
   "dependencies": {
     "browser-request": "^0.3.3",
-    "request": "^2.60.0"
+    "request": "^2.61.0",
+    "url": "^0.11.0"
   },
   "browser": {
     "request": "browser-request"
